--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,31 @@
 @import url('base.css');
 @import url('variables.css');
 
-h1 {
-  color: var(--secondary-color);
-  background-color: var(--primary-color);
+.container {
+  /* width: 1240px; */
+  width: 100%;
+  min-width: 1000px;
+  max-width: 1400px;
+  /* background: #ccc; */
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-p {
-  color: var(--primary-color);
+
+header {
+  /* background: pink; */
+  border-bottom: 1px solid rgba(0,0,0, 0.25);
+}
+
+header .container {
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background: #ccc; */
+}
+   
+header nav ul li {
+  display: inline;
+  margin-left: 40px;
 }
