--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,35 @@ header nav ul li {
   justify-content: center;
   align-items: center;
 }
+
+#portfolio .container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+#portfolio .container li {
+  /* border: 2px solid red; */
+  /* width: 25%; */
+  width: calc((100% - 20px * 3) / 4);
+  margin-bottom: 40px;
+}
+
+#portfolio .container li img {
+  width: 100%;
+}
+
+#portfolio h1 {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-transform: uppercase;
+  font-size: 36px;
+  letter-spacing: calc(36px / 2); /* 50% */
+}
+
+#portfolio h3 {
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+}
