--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,14 @@ header {
   border-bottom: 1px solid rgba(0,0,0, 0.25);
 }
 
+header nav a {
+  color: black;
+}
+
+header nav a:hover {
+  color: var(--primary-color);
+}
+
 header .container {
   height: 80px;
   display: flex;
@@ -72,4 +80,18 @@ header nav ul li {
   font-family: "Noto Sans KR", sans-serif;
   font-weight: normal;
   font-size: 16px;
+}
+
+footer {
+  border-top: 1px solid rgba(0,0,0, 0.25);
+  text-align: center;
+}
+
+footer .container {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+footer .footer-logo {
+  margin-bottom: 14px;
 }
